# not-a-furry-bot

./: Cargo.toml  README.md
.github/: FUNDING.yml
src/: main.rs
src/commands/: mod.rs
src/commands/admin/: mod.rs  role.rs  rrole.rs
src/commands/misc/: echo.rs  embed.rs  help.rs  info.rs  mod.rs
src/commands/wahs/: boop.rs  mod.rs  redpanda.rs
src/handlers/: event_handler.rs  mod.rs
src/loops/: main.rs  mod.rs  pfp.rs
