[package]
name = "discord-cum"
version = "0.1.0"
authors = ["NexInfinite <stormparardiseonline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8.6"
rand = "0.7.3"
reqwest = {version = "0.11.0", features = ["blocking", "json"]}
serde_json = "1.0"
chrono = "0.4.19"
base64 = "0.13.0"